# chester-paper-code

./: .gitignore  README.md  pyproject.toml
recsys/OneRec/: IMPLEMENTATION_SUMMARY.md  config.py  test_decoder.py  test_integration.py
recsys/OneRec/onerec/: __init__.py  config.py  decoder.py  encoder.py  model.py  reward_system.py  tokenizer.py  training.py
recsys/OneTrans/: 2510.26104v1.txt  README.md  onetrans.py
