[project]
name = "chester-paper-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.1",
    "torchsummary>=1.5.1",
    "torchview>=0.2.7",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
